nginx-deployment/web-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webserver
  namespace: myapp
  labels:
    app: webserver
spec:
  selector:
    app: webserver
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 30001

---



apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: " webserver deployment"
  name: webserver-deployment
  namespace: myapp
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  minReadySeconds: 5
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: webserver
        image: nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
