nginx-deployment/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webserver-vs
  namespace: myapp
spec:
  hosts:
  - hi.aksa.com.pk
  gateways:
  - malik-gateway
  http:
  - route:
    - destination:
#        host: webserver.default.svc.cluster.local
        host: webserver.myapp.svc.cluster.local
        port:
          number: 80
